# tangerine

./: .gitignore  CMakeLists.txt  README.md  main.cpp  tangerine.sln
tangerine/: App.xaml  App.xaml.cs  MainPage.xaml  MainPage.xaml.cs  Package.appxmanifest  tangerine.csproj  tangerine_TemporaryKey.pfx
tangerine/BundleArtifacts/: x64.txt  x86.txt
tangerine/Properties/: AssemblyInfo.cs
tangerineExtension/: ConfigAgent.cs  Logger.cs  TangerineClient.cs  tangerineExtension.csproj
tangerineExtension/LogInterface/: FileWriter.cs  LogManager.cs
tangerineExtension/Properties/: AssemblyInfo.cs
